SVN
---

	+ Save grop settings in ~/.config/grop/groprc instead of ~/.grop
	+ Improved the code for checking for command line option compatibility.


Version 0.4 (26/05/2014)
------------------------

	+ Bugfix: In some cases, tmp files were not removed after installing a 
	  package.
	+ Bugfix: Some files were not registered when logging the own porg
	  installation with "make logme".
	+ Bugfix: The main window of grop was partially invisible.
	+ Bugfix: Porgball failed to extract porgballs in some cases.
	+ New feature: When installing a package, save the environment variables
	  passed to ./configure, and not only the command line options.
	+ New feature: Expand any environment variable (and not only $HOME),
	  in variable LOGDIR in porgrc.
	+ New feature: Added option '-X|--exact-version' to porg and porgball (see 
	  man page).
	+ Improved the code for searching for package information.
	+ Added porg.spec.
	+ Removed the (buggy) superporg script.
	+ Added short option '-m' for '--log-missing'.


Version 0.3 (19/05/2014)
------------------------

	+ Readded GPL License and Copyright.
	+ Bugfix: Properly log files with spaces in their names.
	+ Bugfix: EXCLUDE variable in porgrc was not parsed correctly.
	+ Bugfix: Skip sourcing of /etc/bash_completion when installing
	  porg_bash_completion, to avoid errors from foreign software.


Version 0.2 (23/04/2014)
------------------------

	+ Several bugs fixed thanks to the contribution of Masahiro Kasahara:
	  - paco2porg failed when importing paco logs with no logged files
	  - porg hanged up when logging packages and the installer program calls 
	    jemalloc
	+ Fixed bug that prevented logging of files created by programs that don't
	  terminate normally.
	+ Fixed bug with resolution of relative paths.
	+ Removed option '-g|--log-ignore-errors'.
	+ Handle system calls openat(), linkat(), etc... when installing a package.
	+ Do not handle *truncate() system calls when installing a package.