@@ -24,6 +24,10 @@ namespace Porg
 		SORT_BY_DATE
 	} sort_t;
 
+	long const UNKNOWN_SIZE = -1;
+	long const KILOBYTE = 1024;
+	long const MEGABYTE = 1048576;
+	long const GIGABYTE = 1073741824;
 
 	class Error : public std::runtime_error
 	{
@@ -44,7 +48,7 @@ namespace Porg
 		}
 	};
 
-	extern std::string fmt_size(ulong size);
+	extern std::string fmt_size(long size);
 	extern std::string fmt_date(time_t date, bool print_hour);
 	extern bool in_paths(std::string const&, std::string const&);
 
