@@ -8,7 +8,7 @@
 
 #include "config.h"
 #include "file.h"
-#include "common.h"	// Error()
+#include "common.h"
 
 using std::string;
 using namespace Porg;
@@ -25,13 +25,16 @@ File::File(string const& name_, long size_, string const& ln_name_ /* = "" */)
 File::File(string const& name_)
 :
 	m_name(name_),
-	m_size(0),
+	m_size(UNKNOWN_SIZE),
 	m_ln_name()
 {
 	struct stat s;
 
-	if (lstat(m_name.c_str(), &s) < 0 || S_ISDIR(s.st_mode))
-		throw Error("Invalid path");
+	if (lstat(m_name.c_str(), &s) < 0)
+		return;
+
+	else if (S_ISDIR(s.st_mode))
+		throw Error(m_name + ": Is a directory");
 
 	else if (S_ISLNK(s.st_mode)) {
 		char ln[4096];
