@@ -61,8 +61,8 @@ class PkgSet : public std::vector<Pkg*>
 
 	};	// class PkgSet::Sorter
 
-	ulong	m_total_size;
-	ulong	m_total_files;
+	long m_total_size;
+	long m_total_files;
 
 };		// class PkgSet
 
